<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/baseline_close_24"
        app:title="@string/game_settings" />
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="20dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/enable_game_timer"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/time_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/edit_timer_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp" >

                <ImageView
                    android:id="@+id/edit_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/outline_timer_24"
                    android:contentDescription="@string/desc_timer" />

                <TextView
                    android:id="@+id/game_timer_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_centerVertical="true"
                    android:text="@string/timer_picker_time"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Button
                    android:id="@+id/timer_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.Material3.Button.ElevatedButton"
                    app:icon="@drawable/outline_edit_24"
                    android:layout_alignParentEnd="true"
                    android:text="@string/edit_timer" />

            </RelativeLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dividerColor="?attr/colorPrimaryContainer"
                app:layout_constraintBottom_toTopOf="@id/rel_layout_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <RelativeLayout
                android:id="@+id/rel_layout_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_marginTop="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/game_ending_options"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rel_layout_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="20dp" >

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:checkedButton="@+id/radio_button_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">
                    <RadioButton
                        android:id="@+id/radio_button_1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/timer_ends" />
                    <RadioButton
                        android:id="@+id/radio_button_2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/all_players_done"/>
                    <RadioButton
                        android:id="@+id/radio_button_3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/one_player_done" />
                    <RadioButton
                        android:id="@+id/radio_button_4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/three_players_done" />
                </RadioGroup>

            </RelativeLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dividerColor="?attr/colorPrimaryContainer"
                app:layout_constraintBottom_toTopOf="@id/rel_layout_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <RelativeLayout
                android:id="@+id/rel_layout_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_marginTop="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/clue_options_text"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rel_layout_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="20dp" >

                <RadioGroup
                    android:id="@+id/hints_options_radios"
                    android:checkedButton="@+id/radio_button_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">
                    <RadioButton
                        android:id="@+id/radio_button_5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/rune_chase" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rune_chase_explaination"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
                    <RadioButton
                        android:id="@+id/radio_button_6"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/tracking_game"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tracking_game_explaination"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
                </RadioGroup>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>